test/libsolidity/syntaxTests/pragma/empty_version.sol
pragma solidity;
// ----
// ParserError 1684: (0-16): Invalid version pragma. Empty version pragma.
